--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cohere-ai": "^7.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "openai": "^4.97.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
