--- a/Front End/package.json
+++ b/Front End/package.json
@@ -15,7 +15,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "recharts": "^2.12.7",
+    "tailwindcss": "^3.4.1",
+    "@headlessui/react": "^2.0.0",
+    "@heroicons/react": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
