--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=Omkarumale@123
 DB_NAME=mini_project_db
 PORT=5001
 GEMINI_API_KEY=AIzaSyBCseTbYj7pG1AoomHY5W1KtJ8Fi-FmNYI
